# template

./: .gitignore  README.md
src/: alembic.ini  main.py  pyproject.toml  setup.cfg
src/api/: router.py
src/api/v1/: item.py
src/core/: config.py  exceptions.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_12_12_0919-78463f3ccf25_init.py
src/db/models/: __init__.py  base.py  item.py  mixins.py
src/db/repository/: base.py  item.py
src/schemas/: item.py
src/services/: item.py
